--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,8 @@
         <spring.boot.version>3.4.5</spring.boot.version>
         <lombok.version>1.18.30</lombok.version>
 
-        <langchain.version>1.0.0-beta5</langchain.version>
+        <langchain4j.version>1.0.0</langchain4j.version>
+        <langchain4j-community.version>1.0.0-beta5</langchain4j-community.version>
 
         <junit.version>5.11.4</junit.version>
         <log4j2.version>2.24.3</log4j2.version>
@@ -82,8 +83,15 @@
             </dependency>
             <dependency>
                 <groupId>dev.langchain4j</groupId>
+                <artifactId>langchain4j-bom</artifactId>
+                <version>${langchain4j.version}</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+            <dependency>
+                <groupId>dev.langchain4j</groupId>
                 <artifactId>langchain4j-community-bom</artifactId>
-                <version>${langchain.version}</version>
+                <version>${langchain4j-community.version}</version>
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
