--- a/thinking-in-langchain/pom.xml
+++ b/thinking-in-langchain/pom.xml
@@ -24,14 +24,15 @@
         </dependency>
 
         <!-- langchain4j dependencies start -->
-<!--        <dependency>-->
-<!--            <groupId>dev.langchain4j</groupId>-->
-<!--            <artifactId>langchain4j</artifactId>-->
-<!--        </dependency>-->
+        <dependency>
+            <groupId>dev.langchain4j</groupId>
+            <artifactId>langchain4j</artifactId>
+        </dependency>
         <dependency>
             <groupId>dev.langchain4j</groupId>
             <artifactId>langchain4j-community-dashscope-spring-boot-starter</artifactId>
         </dependency>
+<!--        私有部署的大模型通过 ollama -->
 <!--        <dependency>-->
 <!--            <groupId>dev.langchain4j</groupId>-->
 <!--            <artifactId>langchain4j-ollama-spring-boot-starter</artifactId>-->
