--- a/thinking-in-langchain/src/main/resources/application.yaml
+++ b/thinking-in-langchain/src/main/resources/application.yaml
@@ -10,6 +10,9 @@ server:
 langchain4j:
   community:
     dashscope:
+      streaming-chat-model:
+        api-key: ${DASHSCOPE_APIKEY}
+        model-name: qwen-plus
       chat-model:
         api-key: ${DASHSCOPE_APIKEY}
 #        模型列表：https://help.aliyun.com/zh/model-studio/models
